# 2048

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt
assets/shaders/: fragment.frag  vertex.vert
include/: 2048.h  2048util.h  board.h  cell.h  macros.h
include/glad/: glad.h
include/renderer/: OpenGLInit.h  renderer.h  rendererutil.h
src/: 2048.cpp  2048.h  2048util.cpp  board.cpp  glad.c  main.cpp
src/renderer/: OpenGLInit.h  Shader.cpp  renderer.cpp  renderer.h
